Updates from ShareLaTeX

--- a/science.tex
+++ b/science.tex
@@ -336,12 +336,14 @@ supplemental material, we describe  and evaluate several possible
 excitation mechanisms that are less likely but not ruled out.
 
 \begin{figure}
-    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_a_OrionSourceI_B3_spw1_robust0.5}.pdf}
-    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_a_OrionSourceI_B6_spw1_robust0.5}.pdf}
-    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_a_OrionSourceI_B7.lb_spw1_robust0.5}.pdf}
-    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_b_OrionSourceI_B3_spw3_robust0.5}.pdf}
-    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_b_OrionSourceI_B6_spw3_robust0.5}.pdf}
-    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_b_OrionSourceI_B7.lb_spw3_robust0.5}.pdf}
+    \begin{tabular}{lr}
+    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_a_OrionSourceI_B3_spw1_robust0.5}.pdf}&
+    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_a_OrionSourceI_B6_spw1_robust0.5}.pdf}\\
+    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_a_OrionSourceI_B7.lb_spw1_robust0.5}.pdf}&
+    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_b_OrionSourceI_B3_spw3_robust0.5}.pdf}\\
+    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_b_OrionSourceI_B6_spw3_robust0.5}.pdf}&
+    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_b_OrionSourceI_B7.lb_spw3_robust0.5}.pdf}\\
+    \end{tabular}
     \label{fig:spectra}
     \caption{Spectra with NaCl (green) and KCl (red) models overlaid}
 \end{figure}
