add a few clarifying words about the core

--- a/science.tex
+++ b/science.tex
@@ -218,7 +218,8 @@ measurements were performed before the spectral lines were identified as
 belonging to NaCl and KCl
  \cite{Ginsburg2018b}.  Source I is the brightest object in the
 Orion nebula at millimeter wavelengths and is deeply embedded within a hot
-core.  It is a system consisting of a $\sim10^4$ \lsun central object with a
+core (though it is moving relative to that core).  It is a system consisting of
+a $\sim10^4$ \lsun central object with a
 photospheric temperature $\approx4000$ K \cite{Testi2010a} surrounded by a
 $\sim0.1$ \msun disk, which we observe nearly edge-on \cite{Plambeck2016a}. The
 central source mass has been debated, with estimates ranging from 7-20 \msun
