--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -189,7 +189,9 @@ outflow (e.g., SiO and H$_2$O) lines.  Only 2-3 emission lines are now
 unidentified in the B6 and B7 spectra, though there are over a dozen in B3 that
 we have not identified. 
 
-We also tentatively identify broad lines at 229.7 GHz and 334.4 GHz as AlO.  If
+We also tentatively identify broad lines at 229.7 GHz and 334.4 GHz as AlO {\bf [rlp:
+I see nothing in the spectra at 334.4 GHz; I question whether we should mention AlO 
+at all]}.  If
 the identification is correct, these lines are broad because of the rich hyperfine
 spectrum of AlO.
 
