--- a/science.tex
+++ b/science.tex
@@ -355,6 +355,7 @@ excitation mechanisms that are less likely but not ruled out.
     These models are not a good fit to the data, underpredicting the vibrationally
     excited level populations, but they highlight that the lines with expected
     emission are uniformly strongly detected.
+    The absorption lines appear to be from the foreground molecular core and cloud.
     }
 \end{figure}
 
@@ -554,7 +555,7 @@ outflow (e.g., SiO and H$_2$O) lines.  Only 2-3 emission lines are now
 unidentified in the B6 and B7 spectra, though there are over a dozen in B3 that
 we have not identified. 
 
-We also tentatively identify broad lines at 229.7 GHz and 334.4 GHz as AlO.  If
+We also tentatively identify broad lines at 229.7 GHz and 344.4 GHz as AlO.  If
 the identification is correct, these lines are broad because of the rich hyperfine
 spectrum of AlO.
 
