science text updates

--- a/science.tex
+++ b/science.tex
@@ -112,7 +112,7 @@ Melvyn Wright\\
 }
 
 
-\title{Orion \sourcei's disk is salty}
+\title{A salty disk around a high-mass protostar}
 
 \begin{document}
 %\baselineskip24pt
@@ -131,8 +131,8 @@ Melvyn Wright\\
  while still embedded in their natal molecular cloud, and thus most molecular
  emission lines do not uniquely trace the disks in these regions. Here, we show
  that two molecular species, NaCl and KCl, appear to uniquely trace the outer
- edges of the disk around the massive (15~\msun) protostellar system Orion
- Source I and are not seen in the disks's natal cloud.
+ edges of the disk around Orion \srci, the disk around the closest high-mass
+ (15~\msun) protostellar system, and are not seen in the disks's natal cloud.
  % rlp: I think we should advertise that we detected lots of transitions;
  % this is not your typical detection of 3 or 4 lines.  Not sure if 
  % Science will allow the use of the word isotopologues, however...
@@ -306,7 +306,8 @@ Because previous studies have failed to detect any atomic recombination lines
 % Good point!
 %
 % and therefore demonstrated that there is no ionized gas around Source I
-\cite{Plambeck2016a,Baez-Rubio2018a}, we reject the atomic formation route. We
+\cite{Plambeck2016a,Baez-Rubio2018a}, we suspect the gas-phase route is less
+likely. We
 therefore suggest that the salts are produced by dust destruction, either
 via sputtering by high-energy particles \cite{Schilke1997a} or by thermal
 desorption of the outer dust layers \cite{Decin2016a}.  The SiO emission seen
@@ -329,16 +330,17 @@ extreme physical or radiative conditions.
 %excitation is important in this environment.
 The molecular transitions we
 observe have high Einstein A values, in the range $\sim10^{-3}-10^0$ s$^{-1}$, and
-correspondingly high critical densities $n_{cr} \sim10^{5}$ \percc for v=0 and
-$n_{cr} \sim 10^{9}$ for $v>=1$
-{\bf [rlp: I thought the RADEX plots showed
-$10^{11}$ for the vibrational levels; in any case, seems weird that 3 orders
-of magnitude in A give 4 orders of magnitude in critical density][ag: I've gone
-back into RADEX and looked at this, and of course the definition of `critical density'
-matters quite a lot, but it does appear that the critical density ratio
-is an order of magnitude higher than the A-value ratio.  It is probably
-better to use an `effective density' per Shirley 2015 rather than a critical
-density, since ncrit is... at best difficult to understand]}, 
+the collision rates for....
+% correspondingly high critical densities $n_{cr} \sim10^{5}$ \percc for v=0 and
+% $n_{cr} \sim 10^{9}$ for $v>=1$
+% {\bf [rlp: I thought the RADEX plots showed
+% $10^{11}$ for the vibrational levels; in any case, seems weird that 3 orders
+% of magnitude in A give 4 orders of magnitude in critical density][ag: I've gone
+% back into RADEX and looked at this, and of course the definition of `critical density'
+% matters quite a lot, but it does appear that the critical density ratio
+% is an order of magnitude higher than the A-value ratio.  It is probably
+% better to use an `effective density' per Shirley 2015 rather than a critical
+% density, since ncrit is... at best difficult to understand]}, 
 where $v$ is the vibrational quantum number.
 Collisional excitation alone cannot explain the different vibrational states
 being observed at a similar brightness level. The rovibrational $\Delta v=1$
@@ -364,7 +366,8 @@ excitation mechanisms that are less likely but not ruled out.
     \label{fig:spectra}
     \caption{Spectra with NaCl (green) and KCl (red) models overlaid.
     The models assume a constant, single excitation temperature $T_{ex}=1000$ K
-    and column densities $N(\mathrm{NaCl})=4\ee{12}$ \persc and $N(\mathrm{KCl})=2\ee{12}$ \persc.
+    and column densities $N(\mathrm{NaCl})=4\ee{14}$ \persc and
+    $N(\mathrm{KCl})=2\ee{14}$ \persc.
     The $^{37}$Cl isotopologues are included at half those column densities,
     and the $^{41}$K isotopologue at one quarter.
     These models are not a good fit to the data, underpredicting the vibrationally
